# RealTime-Clickstream-Anomaly

./: .gitignore  docker-compose.yml  readme.md
.github/agents/: my-agent.agent.md
.github/workflows/: rust.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/src/: __init__.py  dependencies.py
backend/src/routes/: __init__.py  batch.py  realtime.py
clickstream-frontend/: .dockerignore  Dockerfile  README.md  angular.json  docker-compose.yml  nginx.conf  package-lock.json  package.json
clickstream-frontend/src/: index.html  styles.css
clickstream-frontend/src/app/: app-module.ts  app-routing-module.ts  app.spec.ts  app.ts
clickstream-frontend/src/app/services/: data-fetch-realtime.spec.ts  data-fetch-realtime.ts  data-fetch.spec.ts  data-fetch.ts
data_processors/spark_streaming/: Dockerfile  spark_processor.py
data_producers/clickstream_events/: Cargo.toml  Dockerfile  RealTime-Clickstream-Anomaly.code-workspace
data_producers/clickstream_events/src/: handle_parquet.rs  main.rs
data_producers/orders_transaction_history/: Dockerfile  Orders_Transaction_History.parquet
data_producers/orders_transaction_history/src/: historic_dataset_generation.py
pipelines/: .env.local  Dockerfile  batch_processing.py  pyproject.toml
pipelines/examples/: example_python_spark.py  example_python_spark_debug.py
pipelines/src/: helpers.py
pipelines/src/ingest_pipeline_batch/: batch_processing.py
pipelines/src/streaming_pipeline/: realtime_processing.py
setup/: init_minio.sh  upload_parquet_to_bucket.sh
(+3 files in other folders)
