[package]
name = "clickstream_events"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
log = "0.4"
env_logger = "0.10"